syntax = "proto3";
include "user.proto";
package com.example.grpc.chat;

message ChatMessage {
    string from = 1;
    string message = 2;
}

message ChatMessageFromServer {
    ChatMessage message = 2;
}

message Empty(){
}

service ChatService {
    rpc chat(stream ChatMessage) returns (stream ChatMessageFromServer);
    rpc onlineStatus(ConnectionStatus) returns(Empty);
}